force-app/main/default/objects/abd_License_Types__c/abd_License_Types__c.object-meta.xml
<CustomObject>
    <label>License Type</label>
    <nameField>
        <displayFormat>LT-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>