force-app/main/default/objects/abd_License_Types__c/fields/abd_Available_Actions__c.field-meta.xml
<CustomField>
    <fullName>abd_Available_Actions__c</fullName>
    <description>The API name of the entries MUST align with the values in the dx_IconManagement_mdt metadata object</description>
    <label>Available Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AdditionalLocations</fullName>
                <label>Additional Locations</label>
            </value>
            <value>
                <fullName>AddPrivilege</fullName>
                <label>Add Privilege</label>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>ChangeDramCarrier</fullName>
                <label>Change Dram Carrier</label>
            </value>
            <value>
                <fullName>LabelApproval</fullName>
                <label>Label Approval</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>KegRegistrationBooklet</fullName>
                <label>Order Keg Registration booklet</label>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>TransferLicense</fullName>
                <label>Transfer a License</label>
            </value>
            <value>
                <fullName>UpdateOfficer</fullName>
                <label>Update Officer</label>
            </value>
            <value>
                <fullName>UpdateOwner</fullName>
                <label>Update Owner</label>
            </value>
            <value>
                <fullName>UpdatePremises</fullName>
                <label>Update Premises</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>