force-app/main/default/objects/abd_License_Types__c/fields/abd_Available_as_temporary_license__c.field-meta.xml
<CustomField>
    <fullName>abd_Available_as_temporary_license__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available as temporary license</label>
    <type>Checkbox</type>
</CustomField>