force-app/main/default/objects/abd_License_Types__c/fields/abd_Class__c.field-meta.xml
<CustomField>
    <fullName>abd_Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brewer's Certificate of Compliance</fullName>
            </value>
            <value>
                <fullName>Broker's Permit</fullName>
            </value>
            <value>
                <fullName>Carrier Permit</fullName>
            </value>
            <value>
                <fullName>Charity Beer Wine and Liquor Auction Permit</fullName>
            </value>
            <value>
                <fullName>Class A Liquor License</fullName>
            </value>
            <value>
                <fullName>Class B Beer License</fullName>
            </value>
            <value>
                <fullName>Class B Beer Permit</fullName>
            </value>
            <value>
                <fullName>Class B Liquor License</fullName>
            </value>
            <value>
                <fullName>Class B Native Wine Permit</fullName>
            </value>
            <value>
                <fullName>Class B Wine Permit</fullName>
            </value>
            <value>
                <fullName>Class C Beer Permit</fullName>
            </value>
            <value>
                <fullName>Class C Liquor License</fullName>
            </value>
            <value>
                <fullName>Class C Native Wine</fullName>
            </value>
            <value>
                <fullName>Class D Liquor License</fullName>
            </value>
            <value>
                <fullName>Class E Liquor License</fullName>
            </value>
            <value>
                <fullName>Direct Shipper License</fullName>
            </value>
            <value>
                <fullName>Distiller's Certificate of Compliance</fullName>
            </value>
            <value>
                <fullName>High Proof Native Wholesale Beer Distributor</fullName>
            </value>
            <value>
                <fullName>High Proof Wholesale Beer Distributor</fullName>
            </value>
            <value>
                <fullName>Liquor Manufacturer</fullName>
            </value>
            <value>
                <fullName>Micro-Distilled Spirits Permit</fullName>
            </value>
            <value>
                <fullName>Native Wholesale Beer Distributor</fullName>
            </value>
            <value>
                <fullName>Native Wine Manufacturer</fullName>
            </value>
            <value>
                <fullName>Special Class C Liquor</fullName>
            </value>
            <value>
                <fullName>Vintner's Certificate of Compliance</fullName>
            </value>
            <value>
                <fullName>Wholesale Beer Distributor</fullName>
            </value>
            <value>
                <fullName>Wholesale Wine Distributor</fullName>
            </value>
            <value>
                <fullName>Brew Pub</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>High Proof Brew Pub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>