force-app/main/default/objects/abd_License_Types__c/fields/abd_Default_Length__c.field-meta.xml
<CustomField>
    <fullName>abd_Default_Length__c</fullName>
    <label>Default Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Length</valueSetName>
    </valueSet>
</CustomField>