force-app/main/default/objects/abd_License_Types__c/fields/abd_License_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_License_Type</valueSetName>
    </valueSet>
</CustomField>