force-app/main/default/objects/abd_License_Types__c/fields/abd_Requires_Bond__c.field-meta.xml
<CustomField>
    <fullName>abd_Requires_Bond__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Bond</label>
    <type>Checkbox</type>
</CustomField>