force-app/main/default/objects/abd_License_Types__c/fields/abd_Requires_Dram__c.field-meta.xml
<CustomField>
    <fullName>abd_Requires_Dram__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Dram</label>
    <type>Checkbox</type>
</CustomField>