force-app/main/default/objects/abd_License_Types__c/fields/Available_Term_Lengths__c.field-meta.xml
<CustomField>
    <fullName>Available_Term_Lengths__c</fullName>
    <description>The available term lengths for a specific license type</description>
    <label>Available Term Lengths</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>8 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>14 days</fullName>
            </value>
            <value>
                <fullName>5 days</fullName>
            </value>
            <value>
                <fullName>36 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>