force-app/main/default/objects/abd_License_Types__c/fields/canBePrimaryLicense__c.field-meta.xml
<CustomField>
    <fullName>canBePrimaryLicense__c</fullName>
    <defaultValue>true</defaultValue>
    <description>this license can be a primary license type</description>
    <label>canBePrimaryLicense</label>
    <type>Checkbox</type>
</CustomField>