force-app/main/default/objects/abd_License_Types__c/fields/Does_Not_Allow__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Allow__c</fullName>
    <description>For this license type, these are the license types that can't coexist and must be removed from the package of licenses available.</description>
    <label>Does Not Allow</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_License_Type</valueSetName>
    </valueSet>
</CustomField>