force-app/main/default/objects/abd_License_Types__c/fields/has68MonthRestriction__c.field-meta.xml
<CustomField>
    <fullName>has68MonthRestriction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set, a 6 or 8 month instance of this license requires a 2 month waiting period before it can be renewed for the same licensee at the same location.</description>
    <label>has68MonthRestriction</label>
    <type>Checkbox</type>
</CustomField>