force-app/main/default/objects/abd_License_Types__c/fields/Included_Add_On_Privileges__c.field-meta.xml
<CustomField>
    <fullName>Included_Add_On_Privileges__c</fullName>
    <description>These are the add ons and privileges that are included for this license type</description>
    <label>Included Add On &amp; Privileges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_License_Type</valueSetName>
    </valueSet>
</CustomField>