force-app/main/default/objects/abd_License_Types__c/fields/Included_Not_12Mo_Add_Ons_Privileges__c.field-meta.xml
<CustomField>
    <fullName>Included_Not_12Mo_Add_Ons_Privileges__c</fullName>
    <description>These are addons that are included on licenses that aren't 12 months in length.</description>
    <label>Included Not 12Mo Add Ons &amp; Privileges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_License_Type</valueSetName>
    </valueSet>
</CustomField>