force-app/main/default/objects/abd_License_Types__c/fields/Mandatory_Add_On_Privileges__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Add_On_Privileges__c</fullName>
    <description>These are the mandatory add ons and privileges for this license type</description>
    <label>Mandatory Add On &amp; Privileges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_License_Type</valueSetName>
    </valueSet>
</CustomField>