force-app/main/default/objects/abd_License_Types__c/fields/Optional_12Mo_Add_Ons_Privileges__c.field-meta.xml
<CustomField>
    <fullName>Optional_12Mo_Add_Ons_Privileges__c</fullName>
    <description>Optional Add ons and Privileges if this is a 12 mo license</description>
    <label>Optional 12Mo Add Ons &amp; Privileges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_License_Type</valueSetName>
    </valueSet>
</CustomField>