force-app/main/default/objects/abd_License_Types__c/fields/Optional_Add_On_Privileges__c.field-meta.xml
<CustomField>
    <fullName>Optional_Add_On_Privileges__c</fullName>
    <description>These are the optional add ons and privileges for this license type.</description>
    <label>Optional Add On &amp; Privileges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_License_Type</valueSetName>
    </valueSet>
</CustomField>