force-app/main/default/objects/abd_License_Types__c/fields/Optional_Not_12Mo_Add_Ons_Privileges__c.field-meta.xml
<CustomField>
    <fullName>Optional_Not_12Mo_Add_Ons_Privileges__c</fullName>
    <description>This is available as an option if you don't have a 12 month license.</description>
    <label>Optional Not 12Mo Add Ons &amp; Privileges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_License_Type</valueSetName>
    </valueSet>
</CustomField>