force-app/main/default/objects/abd_License_Types__c/fields/PremisesMustBeIowa__c.field-meta.xml
<CustomField>
    <fullName>PremisesMustBeIowa__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the premises must exist in Iowa</description>
    <label>PremisesMustBeIowa</label>
    <type>Checkbox</type>
</CustomField>