force-app/main/default/objects/abd_License_Types__c/fields/StateIsLocalAuthority__c.field-meta.xml
<CustomField>
    <fullName>StateIsLocalAuthority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when the state is the local authority</description>
    <label>StateIsLocalAuthority</label>
    <type>Checkbox</type>
</CustomField>