force-app/main/default/objects/abd_License_Types__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>abd_Class__c</columns>
    <columns>abd_License_Type__c</columns>
    <columns>abd_Available_Actions__c</columns>
    <columns>Available_Term_Lengths__c</columns>
    <columns>Optional_Add_On_Privileges__c</columns>
    <columns>Included_Add_On_Privileges__c</columns>
    <columns>Included_Not_12Mo_Add_Ons_Privileges__c</columns>
    <columns>Optional_12Mo_Add_Ons_Privileges__c</columns>
    <columns>Optional_Not_12Mo_Add_Ons_Privileges__c</columns>
    <columns>Mandatory_Add_On_Privileges__c</columns>
    <columns>abd_Default_Length__c</columns>
    <columns>abd_Requires_Dram__c</columns>
    <columns>abd_Requires_Bond__c</columns>
    <columns>abd_Available_as_temporary_license__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>