force-app/main/default/objects/abd_License_Types__c/listViews/PremiseinIowa.listView-meta.xml
<ListView>
    <fullName>PremiseinIowa</fullName>
    <columns>NAME</columns>
    <columns>StateIsLocalAuthority__c</columns>
    <columns>PremisesMustBeIowa__c</columns>
    <columns>abd_License_Type__c</columns>
    <columns>abd_Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>PremiseinIowa</label>
</ListView>